Movie Player WIP

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ ul li a,.dropdown a{
   scrollbar-width: none;  /* Firefox */
 }
 
-.popular-container .movie-section {
+.popular-container .movie-section .poster-container {
   position: absolute;
   z-index: 2;
 }
@@ -573,7 +573,7 @@ ul li a,.dropdown a{
   z-index: 999;
   height: 300px;
   width: 284px;
-  background: var(--dark);
+  background: var(--black);
   border-radius: 8px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -583,7 +583,7 @@ ul li a,.dropdown a{
 
 .player-image {
   width: 100%;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
 }
 
 .hero-vignette {
