--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ ul li a,.dropdown a{
   margin-top: 20px;
   margin-bottom: 20px;
   transform: scale(1.2);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
+  box-shadow: 2px 1px 3px 0.2px rgba(0, 0, 0, 0.6);
 }
 
 .player-image {
