--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ span {
   padding: 30px 0 30px 0 ;
   justify-content: space-around;
   gap:20px;
+  flex-wrap: wrap; /* Add God Func */
 }
 
 .profile a img {
@@ -504,7 +505,7 @@ ul li:not(:first-of-type) a:hover {
 .btn-riproduci {
   display: flex;
   width: 212px;
-  height: 62px;
+  height: 50px;
   background: var(--white);
   border-radius: 4px;
   padding: 15px 30px;
