--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ span {
   background: transparent;
   border: 1px solid var(--gray);
   color: var(--gray); 
+  text-decoration: none;
 }
 
 .btn-gestisci-profili:hover{
@@ -428,11 +429,12 @@ ul li:not(:first-of-type) a:hover {
 
 .movieposter {
   width: 100%;
-  height: 810px;
+  height: 906px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url(./assets/img/posters/MoviePoster.png);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  margin-bottom: 50px;
 }
 
 .movieinfo-pos {
@@ -498,23 +500,29 @@ ul li:not(:first-of-type) a:hover {
   width: 32px;
   height: 32px;
   padding : 5px;
-  margin-right: 20px;
+  margin-right: 12px;
 }
 
 
 .btn-riproduci {
   display: flex;
-  width: 212px;
+  width: 194px;
   height: 50px;
   background: var(--white);
   border-radius: 4px;
-  padding: 15px 30px;
+  padding: 16px 22px;
   font-size: 22px;
   font-weight: 500;
   line-height: 28px;
   border: 0;
   align-items: center;
-  white-space: nowrap; 
+  white-space: nowrap;
+  color: black;
+  text-decoration: none;
+}
+
+.btn-riproduci:hover {
+  background: var(--smokeWhite);
 }
 
 .btn-info {
@@ -522,11 +530,15 @@ ul li:not(:first-of-type) a:hover {
   color: var(--white);
 }
 
+.btn-info:hover {
+  background: rgba(255, 255, 255, 0.25);
+}
+
 .info {
   width: 32px;
   height: 32px;
   padding : 3px;
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .popular-container {
@@ -576,7 +588,8 @@ ul li:not(:first-of-type) a:hover {
 
 .movie-poster img {
   max-height: 160px;
-  max-width: 285px;
+  max-width: 284px;
+  width: 16vw;
   border-radius: 4px;
 }
 
@@ -729,7 +742,7 @@ ul li:not(:first-of-type) a:hover {
 }
 
 .god-container {
-  height: 250px;
+  height: 260px;
 }
 
 .top-ten {
@@ -757,6 +770,7 @@ ul li:not(:first-of-type) a:hover {
 .top10flex img{
   z-index: 1;
   max-height: 200px;
+  max-width: 135px
 }
 
 .numberstop{
@@ -770,14 +784,13 @@ ul li:not(:first-of-type) a:hover {
   font-size: 250px;
   position: relative;
   line-height: 250px;
-  left: 6%;
-  top: 4%;
-  color:#141414;
+  left: 12%;
+  color: black;
 }
 
 .top10flex:first-child .numberstop
 {
-  left: 14%;
+  left: 16%;
 }
 
 .top10container::-webkit-scrollbar {
@@ -924,7 +937,7 @@ footer {
     justify-content: flex-start;
   }
 
-  .btn-riproduci{
+  .btn-riproduci {
     width: 45%;
     height: 32px;
     font-size: 14px;
