--- a/style.css
+++ b/style.css
@@ -292,7 +292,8 @@ ul { list-style-type: none; }
   width: 100%;  
   align-items: center;
   padding-right: 16px;
-  background: #18181899; 
+  /* background: #18181899; */
+  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0.89) 10%,rgba(0, 0, 0, 0));
   position: fixed; 
   z-index: 9999; /* GOD Index */
 }
