--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h4 {
 }
 
 hr {
-  border-color: var(--clearwhite);
+  border-color: rgba(255, 255, 255, 0.144);
 }
 
 span {
@@ -371,8 +371,9 @@ ul li:not(:first-of-type) a:hover {
   width: 200px;
   padding: 16px 0;
   z-index: 1;
-  right: 0;
-  top: 83px;
+  right: 20px;
+  top: 70px;
+  border: 1px solid rgba(255, 255, 255, 0.151);
 }
 
 .licontainer:hover .dropdown{
