--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ ul li:not(:first-of-type) a:hover {
 
 .rating {
   padding: 1% 3%;
-  font-size: 20px;
+  font-size: max(10px, 1vw);
   border-left: 2px solid var(--smokeWhite);
   position: absolute;
   background: #4242424b;
