--- a/style.css
+++ b/style.css
@@ -298,9 +298,12 @@ ul { list-style-type: none; }
   z-index: 9999; /* GOD Index */
 }
 
-.navdesktop div:last-child img {
-  height: 20px;
-  width: 20px;
+.navdesktop .licontainer a img {
+  height: 10px;
+  width: 12px;
+  position: absolute;
+  top: 45%;
+  left: 96.2%;
 }
 
 #profile-picture img, .dropdown:not(:empty) li img {
@@ -334,6 +337,7 @@ ul li:not(:first-of-type) a:hover {
   gap: 20px;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 50px;
 }
 
 .nav-links {
@@ -371,7 +375,7 @@ ul li:not(:first-of-type) a:hover {
   width: 200px;
   padding: 16px 0;
   z-index: 1;
-  right: 20px;
+  right: 50px;
   top: 70px;
   border: 1px solid rgba(255, 255, 255, 0.151);
 }
@@ -1000,7 +1004,7 @@ footer {
     width: 46.56px;
   }
 
-  .navdesktop{
+  .navdesktop {
     background-image: linear-gradient(to bottom,rgba(0,0,0,.7) 10%,rgba(0,0,0,0));
     background-color: transparent;
     padding:0;
