--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ ul { list-style-type: none; }
   width: 12px;
   position: absolute;
   top: 45%;
-  left: 96.2%;
+  right: 65px;
 }
 
 #profile-picture img, .dropdown:not(:empty) li img {
@@ -1021,6 +1021,11 @@ footer {
   .movieposter{
     background-size: cover;
     background-position: center;
+  }
+
+  .nav-items {
+    padding-right: 2px;
+    padding-top: 4px;
   }
 
 }
