--- a/style.css
+++ b/style.css
@@ -326,12 +326,7 @@ ul li a,.dropdown a{
 
 ul li:not(:first-of-type) a:hover {
   color: var(--gray);
-  transition: all .4s ease-in-out;
-}
-
-.dropdown li:nth-last-child(-n+6) img {
-  fill: var(--white);
-  filter: invert();
+  transition: all 0.4s ease-in-out;
 }
 
 .nav-items {
@@ -755,7 +750,6 @@ ul li:not(:first-of-type) a:hover {
   position: absolute;
   top: 2px;
   left: 2px;
-  filter: invert();
   transform: scale(.8);
 }
 
@@ -764,7 +758,6 @@ ul li:not(:first-of-type) a:hover {
   position: absolute;
   top: 2px;
   left: 2px;
-  filter: invert();
   transform: scale(.8);
 }
 
@@ -773,7 +766,6 @@ ul li:not(:first-of-type) a:hover {
   position: absolute;
   top: 2px;
   left: 2px;
-  filter: invert();
   transform: scale(.8);
 }
 
@@ -904,73 +896,63 @@ ul li:not(:first-of-type) a:hover {
 
 
 /* footer */
+
 footer {
-  padding: 20px;
-  text-align: left;
+  width: 60%;
+  margin: 0 auto;
   color: var(--dark);
-  margin-left: 70px;
+  font-size: max(16px, 1.2vw);
 }
 
 .link {
   padding: 50px;
 }
 
-.logos {
-  grid-gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
-  text-align:left;
+.social-icons{
+  display: flex;
+  gap: 1em;
+}
+
+.social-icons img{
+  font-size: max(14px, .9vw);
+  margin-bottom: 1em;
+  margin-top: 3em;
+}
+
+.footer-links{
+  display: flex;
+  justify-content: space-between;
+  font-size: max(14px, .9vw);
+  font-weight: 200;
+}
+
+.footer-links ul{
+  padding: 0;
+}
+
+.footer-links ul li{
+  margin-bottom: 1.2em;
+}
+
+.footer-links ul li a{
+  color: var(--clearwhite);
+}
+
+.service-code{
   display: block;
-  margin-left: 30px;
-  margin-bottom: 9px;
-}
-.logos a{
-  padding: 10px;
-}
-
-.logo {
-  color: var(--dark);
+  margin-bottom: 1em;
+  color: var(--clearwhite);
+  background-color: #141414;
+  border: 1px solid var(--clearwhite);
+  padding: 6px 4px;
 }
 
-.sub-links ul {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
+.copyright{
+  font-size: max(10px, .9vw);
+  color: var(--clearwhite);
 }
 
-.logoSocial{
-  color: var(--dark);
-  font-size: 2em;
-  height: 1em;
-}
-
-
-.logos {
-  grid-gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
-  text-align:left;
-  display: block;
-  margin-left: 30px;
-  margin-bottom: 9px;
-}
-.logos a{
-  padding: 10px;
-}
-
-.logo {
-  color: var(--dark);
-}
-
-.sub-links ul {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.logoSocial{
-  color: var(--dark);
-  font-size: 2em;
-  height: 1em;
-}
+/* End footer */
 
 /* Tablet Size */
 @media screen and (max-width:884px) {
@@ -1029,6 +1011,24 @@ footer {
     padding-top: 4px;
   }
 
+  /* footer 884 */
+
+  footer
+  {
+    width: 90%;
+  }
+
+}
+
+@media screen and (max-width:590px){
+
+  .footer-links{
+    flex-wrap: wrap;
+  }
+
+  .footer-links ul{
+    width: 50%;
+  }
 }
 
 /* Mobile Size */
@@ -1229,5 +1229,8 @@ footer {
   }
 
   /* Top 10 bordello */
+
+  /* footer */
   
+
 }
