--- a/style.css
+++ b/style.css
@@ -375,6 +375,20 @@ ul li:not(:first-of-type) a:hover {
   right: 50px;
   top: 70px;
   border: 1px solid rgba(255, 255, 255, 0.151);
+  transition: ease-in 0.2s;
+}
+
+.keepopen{
+  display: block;
+  width: 50px;
+  height: 30px;
+  position: absolute;
+  right: 50px;
+  top: 50px;
+}
+
+.keepopen:hover .dropdown{
+  display: block;
 }
 
 .licontainer:hover .dropdown{
